fix DT-2131, vertical page names are cut off

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -129,6 +129,7 @@ body {
         text-align: center;
         h1 {
             padding-bottom: 10px;
+            max-width: 45vh;
             font-size: bkscale(@font-swatch1-font-size,0.9);
             line-height: bkscale(@font-swatch1-line-height,0.9);
             color: @color-swatch5;
@@ -153,7 +154,6 @@ body {
             transform: rotate(-90deg) translate(-100%, 0px);
             h1 {
                 padding: 0;
-                max-width: 25vh;
                 line-height: 1.2;
                 text-align: right;
                 white-space: nowrap;
@@ -166,11 +166,6 @@ body {
             width: 90%;
             float: right;
             min-height: 437px;
-        }
-    }
-    @media only screen and (min-width : 1024px) {
-        .page-title h1 {
-            max-width: 35vh;
         }
     }
 }
